fix: drop obsolete ProjectBuilder assumption guard
The guard silently skipped all three tests; with java.lang opened ProjectBuilder works, so failures should surface.